--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,11 @@ td:first-of-type{
     width:250px;
 }
 
-
+#toggle{
+    background-color:white; 
+    color:dodgerblue;
+    margin-bottom:.5em;
+}
 
 #CurrentWeather{
   /*  display:inline; */
